# mesh-torus-distributed

./: .gitignore  Cargo.toml  README.md
crates/mt-burn/: Cargo.toml
crates/mt-burn/src/: autodiff_ext.rs  fp8_ops.rs  lib.rs  module_ext.rs  optim_ext.rs
crates/mt-comm/: Cargo.toml
crates/mt-comm/src/: collective.rs  lib.rs  mock.rs  p2p.rs  tcp.rs  topology_aware.rs
crates/mt-core/: Cargo.toml
crates/mt-core/src/: lib.rs
crates/mt-core/src/precision/: config.rs  fp8_tensor.rs  loss_scale.rs  mod.rs  quantize.rs  scaling.rs
crates/mt-core/src/topology/: coordinator.rs  device.rs  discovery.rs  hybrid.rs  mesh.rs  mod.rs  torus.rs
crates/mt-pipeline/: Cargo.toml
crates/mt-pipeline/src/: checkpoint.rs  communicator.rs  executor.rs  lib.rs  placement.rs  stage.rs
crates/mt-pipeline/src/schedule/: gpipe.rs  mod.rs  onef1b.rs
crates/mt-training/: Cargo.toml
crates/mt-training/src/: accumulator.rs  config.rs  lib.rs  runtime.rs  step.rs
examples/gpt-1b/: Cargo.toml  README.md
examples/gpt-1b/src/: main.rs  model.rs  synthetic_data.rs  transformer.rs
