[workspace]
members = [
    "crates/mt-core",
    "crates/mt-comm",
    "crates/mt-pipeline",
    "crates/mt-training",
    "crates/mt-burn",
    "examples/gpt-1b",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mesh-Torus Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/mesh-torus-distributed"
rust-version = "1.78"

[workspace.dependencies]
# Burn deep learning framework
burn = { version = "0.21", default-features = false }
burn-train = { version = "0.21" }
burn-ndarray = { version = "0.21" }
burn-autodiff = { version = "0.21" }
burn-cuda = { version = "0.21" }
burn-optim = { version = "0.21" }

# FP8 / half-precision
float8 = "0.7"
half = "2.7"

# Async runtime & communication
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# GPU topology detection
nvml-wrapper = { version = "0.12" }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hashbrown = "0.15"
indexmap = "2.7"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"

# Testing
rstest = "0.24"
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
mt-core = { path = "crates/mt-core" }
mt-comm = { path = "crates/mt-comm" }
mt-pipeline = { path = "crates/mt-pipeline" }
mt-training = { path = "crates/mt-training" }
mt-burn = { path = "crates/mt-burn" }
